--- a/examples/simple_rest_signature_provider/package.json
+++ b/examples/simple_rest_signature_provider/package.json
@@ -1,53 +1,54 @@
 {
     "name": "local_signer_example",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "",
-    "main": "index.js",
+    "main": "./lib/index.cjs",
+    "module": "./src/index.js",
     "type": "module",
-    "scripts": {
-        "lint": "run-s lint:*",
-        "lint:types": "tsc",
-        "lint:format": "prettier src \"*.json\" \"src/*.js\" --check",
-        "lint:js": "eslint --fix \"src/**/*.js\"",
-        "format": "prettier src \"*.json\" \"src/*.js\" --write"
-    },
+    "types": "./lib/index.d.ts",
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Launchbadge <contact@launchbadge.com>",
+    "license": "Apache-2.0",
     "dependencies": {
+        "@hashgraph/sdk": "^2.15.0",
+        "@hashgraph/tck-chai": "link:../../packages/tck-chai",
+        "axios": "^0.26.1",
+        "express": "^4.17.3"
+    },
+    "devDependencies": {
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/eslint-parser": "^7.17.0",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-modules-commonjs": "^7.17.9",
         "@babel/register": "^7.17.7",
-        "@hashgraph/sdk": "link:..",
+        "@grpc/proto-loader": "^0.6.9",
+        "@playwright/test": "^1.21.1",
+        "@types/chai": "^4.3.1",
         "@types/crypto-js": "^4.1.1",
         "@types/express": "^4.17.13",
         "@types/long": "^4.0.1",
-        "@types/node": "^17.0.23",
+        "@types/mocha": "^9.1.1",
+        "@types/node": "^17.0.27",
         "@types/utf8": "^3.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.19.0",
-        "@typescript-eslint/parser": "^5.19.0",
-        "axios": "^0.26.1",
+        "@typescript-eslint/eslint-plugin": "^5.21.0",
+        "@typescript-eslint/parser": "^5.21.0",
         "babel-plugin-dynamic-import-node": "^2.3.3",
         "babel-plugin-module-rewrite": "^0.2.0",
+        "chai": "^4.3.6",
         "dotenv": "^14.3.2",
-        "eslint": "^8.13.0",
+        "dpdm": "^3.9.0",
+        "eslint": "^8.14.0",
+        "eslint-plugin-chai-expect": "^3.0.0",
         "eslint-plugin-compat": "^4.0.2",
         "eslint-plugin-deprecation": "^1.3.2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsdoc": "^37.9.7",
         "eslint-plugin-mocha": "^10.0.4",
         "eslint-plugin-node": "^11.1.0",
-        "express": "^4.17.3",
         "mocha": "^9.2.2",
         "prettier": "^2.6.2",
         "typedoc": "^0.22.15",
-        "typescript": "^4.6.3",
-        "vite": "^2.8.6"
-    },
-    "devDependencies": {
-        "npm-run-all": "^4.1.5"
+        "typescript": "^4.6.3"
     }
 }
