--- a/packages/tck-chai/Taskfile.yml
+++ b/packages/tck-chai/Taskfile.yml
@@ -54,15 +54,17 @@ tasks:
         cmds:
             - babel src -d lib --out-file-extension .cjs
 
-    test:
+    "test:release":
         deps:
-            - "test:unit"
+            - install
+            - build
+            - format
+            - lint
 
-    "test:unit":
+    publish:
+        preconditions:
+            - "! grep '\".*\": \"link:.*\"' package.json > /dev/null"
         deps:
-            - "test:unit:node"
-
-    "test:unit:node":
+            - "test:release"
         cmds:
-            - ./node_modules/.bin/mocha --inline-diffs -r @babel/register -r chai/register-expect.js "test/*.js" {{.CLI_ARGS}}
-
+            - pnpm publish {{.CLI_ARGS}}
