--- a/packages/tck/Taskfile.yml
+++ b/packages/tck/Taskfile.yml
@@ -7,15 +7,6 @@ tasks:
         deps:
             - build
 
-    docs:
-        cmds: 
-            - ./node_modules/.bin/typedoc --excludeInternal 
-                --excludePrivate 
-                --excludeProtected 
-                --out docs 
-                --validation.invalidLink 
-                --entryPoints src/index.js src/browser.js src/native.js
-
     install:
         cmds:
             - pnpm i
@@ -43,7 +34,7 @@ tasks:
 
     "lint:types":
         cmds:
-            - ./node_modules/.bin/tsc
+            - tsc
 
     "lint:dpdm":
         cmds:
@@ -58,6 +49,8 @@ tasks:
             - ./node_modules/.bin/eslint --fix "src/*.js"
 
     package:
+        deps:
+            - build
         cmds:
             - babel src -d lib --out-file-extension .cjs
 
